--- a/story-staging.html
+++ b/story-staging.html
@@ -79,17 +79,31 @@
         const db = getFirestore(app);
 
         // load drug info ui-fields
-        let drugUIFields = [];
+        // right after you initialize Firestore…
+        let drugSummaryFields = [], drugExtendedFields = [];
+
         (async () => {
-            const q = query(
-                collection(db, "ui-fields"),
-                where("ui_part", "==", "drug"),
-                where("type", "==", "Summary"),
-                orderBy("order")
+            // Summary
+            const sumQ = query(
+                collection(db, 'ui-fields'),
+                where('ui_part', '==', 'drug'),
+                where('type', '==', 'Summary'),
+                orderBy('order')
             );
-            const snap = await getDocs(q);
-            drugUIFields = snap.docs.map(d => d.data());
+            const sumSnap = await getDocs(sumQ);
+            drugSummaryFields = sumSnap.docs.map(d => d.data());
+
+            // Extended
+            const extQ = query(
+                collection(db, 'ui-fields'),
+                where('ui_part', '==', 'drug'),
+                where('type', '==', 'Extended'),
+                orderBy('order')
+            );
+            const extSnap = await getDocs(extQ);
+            drugExtendedFields = extSnap.docs.map(d => d.data());
         })();
+
 
 
         const drugCache = new Map();                 // name → { …profile… } | null
@@ -180,27 +194,72 @@
             }
             const InfoSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 ml-1 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M12 2.25c5.385 0 9.75 4.365 9.75 9.75S17.385 21.75 12 21.75 2.25 17.385 2.25 12 6.615 2.25 12 2.25z"/></svg>`;
             const ShieldSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-green-600 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m1-2a9 9 0 11-8 0v5a2 2 0 002 2h4a2 2 0 010 0V6z"/></svg>`;
+            // at the top of your <script> (right after your other SVG constants)
+            const BackIcon = `
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
+                </svg>
+                `;
+            const ExtendedIcon = `
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m3.75 9v6m3-3H9m1.5-12H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+                </svg>
+                `;
 
             // Modal controls
             const modal = document.getElementById('modal');
             document.getElementById('modal-close').onclick = () => modal.classList.add('hidden');
-            function showModal(title, info) {
-                // title is the drug name, info is the object from data.drugInfo[title]
-                const listItems = drugUIFields
-                    .map(f => {
-                        const val = info[f.data_field_id] ?? "";
-                        return `<li><strong>${f.name}:</strong> ${val}</li>`;
-                    })
-                    .join("");
 
-                document.getElementById("modal-title").textContent = title;
-                document.getElementById("modal-content").innerHTML =
-                    `<ul class="list-disc ml-5">
-                       ${listItems}
-                     </ul>`;
-                modal.classList.remove("hidden");
+            // 1) Replace your existing showModal with this:
+            function showModal(title, info) {
+                // build the summary list
+                const listItems = drugSummaryFields
+                    .map(f => `<li><strong>${f.name}:</strong> ${info[f.data_field_id] ?? ''}</li>`)
+                    .join('');
+
+                // insert into modal
+                modal.querySelector('#modal-title').textContent = title + ' Summary';
+                modal.querySelector('#modal-content').innerHTML = `
+    <ul class="list-disc ml-5 mb-4">${listItems}</ul>
+    <button id="show-extended-btn"
+            class="mt-4 float-right text-blue-800 bg-transparent px-3 py-1 rounded">
+      ${ExtendedIcon}
+    </button>
+  `;
+                // wire up the new button
+                modal.querySelector('#show-extended-btn')
+                    .addEventListener('click', () => renderModal('Extended', title, info));
+
+                modal.classList.remove('hidden');
             }
 
+            // 2) Add renderModal(type, title, info) to handle both back and forth:
+            function renderModal(type, title, info) {
+                const fields = type === 'Extended'
+                    ? drugExtendedFields
+                    : drugSummaryFields;
+
+                const listItems = fields
+                    .map(f => `<li><strong>${f.name}:</strong> ${info[f.data_field_id] ?? ''}</li>`)
+                    .join('');
+
+                // button text and handler toggle
+                const toggleText = type === 'Extended' ? 'Back to Summary' : 'Show Extended Info';
+                const nextType = type === 'Extended' ? 'Summary' : 'Extended';
+
+                modal.querySelector('#modal-title').textContent = title + ' ' + type;
+                modal.querySelector('#modal-content').innerHTML =
+                    `<ul class="list-disc ml-5 mb-4">${listItems}</ul>
+                    <button id="toggle-info-btn"
+                            class="mt-4 float-right text-blue-800 bg-transparent px-3 py-1 rounded">
+                      ${type === 'Extended' ? BackIcon : ExtendedIcon}
+                    </button>
+                  `;
+                modal.querySelector('#toggle-info-btn')
+                    .addEventListener('click', () => renderModal(nextType, title, info));
+
+                modal.classList.remove('hidden');
+            }
 
             // Render story
             function renderStory() {
