--- a/admin-staging.html
+++ b/admin-staging.html
@@ -584,7 +584,7 @@
             // label
             const lbl = document.createElement('lavel');
             lbl.placeholder = 'value';
-            vallblInp.value = key;
+            lbl.value = key;
             lbl.className = 'block font-semibold mb-1';
 
             // delete button
