--- a/admin-staging.html
+++ b/admin-staging.html
@@ -697,7 +697,7 @@ ${ drugNameEl.value }
         function setDrugAiSuccess(msg) {
             drugAiStatus.classList.remove('hidden');
             drugAiStatus.textContent = msg;
-            statdrugAiStatusus.className = 'text-green-600';
+            drugAiStatus.className = 'text-green-600';
         }
 
         
