--- a/admin-staging.html
+++ b/admin-staging.html
@@ -664,7 +664,7 @@ ${ drugNameEl.value }
                     // look for an existing row whose key input === `key`
 
                     console.log("key: " + key);
-                    console.log("data: " + data);
+                    console.log("value: " + value);
 
 
                     const inputEL = document.getElementById(key);
